--- a/black_jack/src/containers/Game/Game.module.css
+++ b/black_jack/src/containers/Game/Game.module.css
@@ -13,3 +13,11 @@
     margin: 0 auto;
     flex-basis: 15%;
 }
+
+.roundResualt{
+    padding: 20px;
+    color: rgb(10, 10, 126);
+    font-weight: 800;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
