--- a/black_jack/src/components/TableBoard/Deck/Deck.module.css
+++ b/black_jack/src/components/TableBoard/Deck/Deck.module.css
@@ -1,19 +1,19 @@
-.Deck {
+.Decks {
     align-items: center;
     margin: auto;
-    flex-direction: column-reverse;
     align-items: baseline;
     border: red 1px ridge;
     display: inline-block;
     align-items: center;
+    width: min-content;
     margin: auto;
     /* flex-basis: 80%; */
     height: 100%;
     display: flex;
     flex-direction: column;
     background-color: cadetblue;
-}
 
+}
 
 
 .Cards{
@@ -25,11 +25,36 @@
     margin: 3px auto;
     display: flex;
     flex-basis: 80%;
+    box-sizing: border-box;
 }
+
 
 .Deck p {
     flex-basis: 10%;
     color: blue;
+}
+
+/* 
+.activeDeck {
+    width: 100%;
+    order: 1;
+    box-shadow: rgba(14, 53, 5, 0.56) 0px 22px 70px 4px;
+    padding: 15px;
+    
+}
+
+.disActiveDeck {
+    box-shadow: initial;
+    padding: initial;
+    box-shadow: initial;
+    background-color: red;
+    background-color: initial;
+} */
+
+.alignCards {
+    display: flex;
+    margin: auto;
+    width: min-content;
 }
 /* .Card {
     align-items: center;
