--- a/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
+++ b/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
@@ -4,7 +4,9 @@
     border: 1px ridge black;
     border-radius: 15%;
     position: relative;
-    box-shadow: inset 1px 2px 1px 0.1px grey;
+    box-shadow: inset 30px 26px 13px 41.1px grey,
+    inset 10px 6px 2px 10.1px rgb(114, 113, 113);
+    background-color: blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,17 +58,19 @@
 
 
 .active {
-    width: 100%;
+   
     order: 1;
     box-shadow:inset 1px 2px 1px 0.1px grey,
+    inset 1px 4px 10px 0.1px rgb(114, 113, 113),
      rgba(208, 211, 208, 0.56) 0px 25px 70px 4px;
-    padding: 8px 9px ;
+    padding: 8px 2px ;
     
 }
 
 .disActive {
     padding: initial;
-    box-shadow: inset 1px 2px 1px 0.1px grey;
+    box-shadow: inset 1px 2px 1px 0.1px grey,
+    inset 1px 4px 10px 0.1px rgb(114, 113, 113);
     background-color: rgb(241, 237, 237);
     width: 35px;
     height: 60px;
