--- a/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
+++ b/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
@@ -63,9 +63,21 @@
     box-shadow:inset 1px 2px 1px 0.1px grey,
     inset 1px 4px 10px 0.1px rgb(114, 113, 113),
      rgba(208, 211, 208, 0.56) 0px 25px 70px 4px;
-    padding: 8px 2px ;
+    /* padding: 8px 2px ; */
     
 }
+
+.Card:hover {
+   
+    /* order: 1; */
+    box-shadow:inset 1px 2px 1px 0.1px rgb(141, 141, 141),
+    inset 1px 4px 10px 0.1px rgb(190, 190, 190),
+     rgba(177, 177, 177, 0.56) 0px 25px 70px 4px;
+    cursor:none;
+    /* padding: 8px 2px ; */
+    
+}
+
 
 .disActive {
     padding: initial;
