--- a/black_jack/src/components/TableBoard/Deck/Deck.module.css
+++ b/black_jack/src/components/TableBoard/Deck/Deck.module.css
@@ -56,6 +56,10 @@
     margin: auto;
     width: min-content;
 }
+
+span{
+    margin: auto;
+}
 /* .Card {
     align-items: center;
     margin: auto;
