--- a/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
+++ b/black_jack/src/components/TableBoard/Deck/Card/Card.module.css
@@ -52,6 +52,11 @@
 
 .Hiden {
     background-color: tomato;
+    color: blue;
+    /* padding: 10px; */
+    box-shadow:inset 1px 2px 1px 0.1px grey,
+    inset 1px 4px 10px 0.1px rgb(190, 179, 179),
+     rgba(229, 231, 229, 0.56) 0px 25px 70px 4px;
     z-index: 2;
 }
 
