--- a/black_jack/src/containers/Game/Game.module.css
+++ b/black_jack/src/containers/Game/Game.module.css
@@ -15,9 +15,27 @@
 }
 
 .roundResualt{
-    padding: 20px;
-    color: rgb(10, 10, 126);
+    padding: 22px 0px 22px 0px;
+    width: 30%;
+    display: flex;
+    margin: auto;
+    color: rgb(215, 215, 233);
     font-weight: 800;
+    flex-basis: 8%;
+    /* border: blue 1px ridge; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(138, 8, 8);
+    box-shadow: inset 3px 2px 1px 1.1px rgb(155, 133, 133),
+    1.0px 1px 1px 0.1px rgb(0, 0, 0);
+    /* transition: ease-out 1s right; */
+}
+
+.roundResualt p{
+    transform: none;
+    padding: auto;
+    margin: auto;
+    font-size: 1.4cm;
+    font-weight: 900;
+    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
 
 }
