--- a/black_jack/src/components/TableBoard/TableBoard.module.css
+++ b/black_jack/src/components/TableBoard/TableBoard.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 600px;
     margin: auto;
+    margin-top: 20px;
     border: 1px black ridge;
     margin-top: 10px;
     background: radial-gradient(green, rgb(17, 99, 41));
