--- a/black_jack/src/containers/Game/Game.module.css
+++ b/black_jack/src/containers/Game/Game.module.css
@@ -11,17 +11,22 @@
 
 .Game h1{
     margin: 0 auto;
-    flex-basis: 15%;
+    flex-basis: 5%;
 }
 
 .roundResualt{
     padding: 22px 0px 22px 0px;
     width: 30%;
+    height: 30%;
+    max-width: 30%;
+    max-height: 30%;
     display: flex;
+    /* display: inline-block; */
+    margin-bottom: 5px;
     margin: auto;
     color: rgb(215, 215, 233);
     font-weight: 800;
-    flex-basis: 8%;
+    flex-basis: 10%;
     /* border: blue 1px ridge; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(138, 8, 8);
@@ -34,7 +39,7 @@
     transform: none;
     padding: auto;
     margin: auto;
-    font-size: 1.4cm;
+    font-size: 1.1cm;
     font-weight: 900;
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
 
